--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ p {
   cursor: pointer;
   position: absolute;
   top: 50%;
+  margin-top: 40px;
   width: auto;
   padding: 15px;
   font-size: 32px;
@@ -267,6 +268,9 @@ p {
   }
 }
 
+/* .mySlides-img {
+  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.8);
+} */
 /* === PORTFOLIO ENDS === */
 /* === FOOTER STARTS === */
 .main-social {
@@ -340,7 +344,6 @@ p {
 }
 
 .social-button:hover {
-  /* background-color: #e74246; */
   box-shadow: 0 0 10px white;
   transform: scale(1.1);
   transition: all 200ms ease-in;
@@ -368,13 +371,13 @@ p {
 
 /* === GALLERY ENDS === */
 /* === RESUME STARTS === */
+.main {
+  padding: 20px 0;
+}
+
 .main::first-letter {
   font-size: 200%;
   padding-left: 40px;
-}
-
-.education {
-  padding: 20px;
 }
 
 .education div {
@@ -402,6 +405,7 @@ p {
   list-style: circle;
   font-size: 18px;
   line-height: 22px;
+  margin: 5px 0;
 }
 
 /* === RESUME ENDS === */
